DevOps/force-app/main/default/objects/Case/fields/BPS_Assigned_to_SF_at_Implementation__c.field-meta.xml
<CustomField>
    <fullName>BPS_Assigned_to_SF_at_Implementation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned to SF at Implementation</label>
    <type>Checkbox</type>
</CustomField>