DevOps/force-app/main/default/objects/Case/fields/BPS_Case_Plan__c.field-meta.xml
<CustomField>
    <fullName>BPS_Case_Plan__c</fullName>
    <label>Case Plan</label>
    <length>18</length>
    <type>Text</type>
</CustomField>