DevOps/force-app/main/default/objects/Case/fields/BPS_Commenced_Using_Funding__c.field-meta.xml
<CustomField>
    <fullName>BPS_Commenced_Using_Funding__c</fullName>
    <label>Commenced Using Funding</label>
    <type>Date</type>
</CustomField>