DevOps/force-app/main/default/objects/Case/fields/BPS_Confirmed_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>BPS_Confirmed_Plan_Type__c</fullName>
    <label>Confirmed Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Plan</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
            <value>
                <fullName>Reassessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>