DevOps/force-app/main/default/objects/Case/fields/BPS_Contact_Attempted__c.field-meta.xml
<CustomField>
    <fullName>BPS_Contact_Attempted__c</fullName>
    <formula>NOT(ISBLANK(BPS_Participant__r.BPS_Current_Plan__r.BPS_First_Planning_Contact_Attempt__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Attempted</label>
    <type>Checkbox</type>
</CustomField>