DevOps/force-app/main/default/objects/Case/fields/BPS_Continuation_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>BPS_Continuation_Confirmed__c</fullName>
    <formula>AND(BPS_IsCurrentPlan__c = TRUE, ISPICKVAL( BPS_Participant__r.BPS_Current_Plan__r.BPS_Review_Type__c, &quot;Continuation&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continuation Confirmed</label>
    <type>Checkbox</type>
</CustomField>