DevOps/force-app/main/default/objects/Case/fields/BPS_Created_From_Plan__c.field-meta.xml
<CustomField>
    <fullName>BPS_Created_From_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Created From Plan)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>