DevOps/force-app/main/default/objects/Case/fields/BPS_Current_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>BPS_Current_Plan_Type__c</fullName>
    <formula>BPS_Participant__r.BPS_Current_Plan__r.BPS_Plan_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Plan Type</label>
    <type>Text</type>
</CustomField>