DevOps/force-app/main/default/objects/Case/fields/BPS_Date_Created_by_LAC__c.field-meta.xml
<CustomField>
    <fullName>BPS_Date_Created_by_LAC__c</fullName>
    <description>BPS - Date Created by LAC/First Assigned to SF</description>
    <inlineHelpText>BPS - Date Created by LAC/First Assigned to SF</inlineHelpText>
    <label>Date Created by LAC/First Assigned to SF</label>
    <type>Date</type>
</CustomField>