DevOps/force-app/main/default/objects/Case/fields/BPS_Days_Between_Expiry_Submission__c.field-meta.xml
<CustomField>
    <fullName>BPS_Days_Between_Expiry_Submission__c</fullName>
    <formula>BPS_Plan_End_Date__c - BPS_Plan_Submitted_to_NDIA_CP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between Expiry &amp; Submission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>