DevOps/force-app/main/default/objects/Case/fields/BPS_Days_Since_Access_Met__c.field-meta.xml
<CustomField>
    <fullName>BPS_Days_Since_Access_Met__c</fullName>
    <formula>TODAY () - BPS_Participant__r.BPS_Access_Met__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Access Met</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>