DevOps/force-app/main/default/objects/Case/fields/BPS_Days_Since_Approval__c.field-meta.xml
<CustomField>
    <fullName>BPS_Days_Since_Approval__c</fullName>
    <formula>TODAY () - BPS_Plan_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>