DevOps/force-app/main/default/objects/Case/fields/BPS_Days_Since_Contact__c.field-meta.xml
<CustomField>
    <fullName>BPS_Days_Since_Contact__c</fullName>
    <formula>TODAY () - BPS_Most_Recent_Planning_Contact_Attempt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>