DevOps/force-app/main/default/objects/Case/fields/BPS_Days_Since_Meeting__c.field-meta.xml
<CustomField>
    <fullName>BPS_Days_Since_Meeting__c</fullName>
    <formula>TODAY () - BPS_Planning_Meeting_Held__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Meeting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>