DevOps/force-app/main/default/objects/Case/fields/BPS_Days_to_Current_Expiry__c.field-meta.xml
<CustomField>
    <fullName>BPS_Days_to_Current_Expiry__c</fullName>
    <formula>BPS_Participant__r.BPS_Current_Expiry__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Current Expiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>