DevOps/force-app/main/default/objects/Case/fields/BPS_Days_to_Meeting__c.field-meta.xml
<CustomField>
    <fullName>BPS_Days_to_Meeting__c</fullName>
    <formula>BPS_Participant__r.BPS_Current_Plan__r.BPS_Scheduled_Planning_Meeting__c - TODAY ()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>