DevOps/force-app/main/default/objects/Case/fields/BPS_Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>BPS_Delay_Days__c</fullName>
    <label>Delay Days</label>
    <summarizedField>BPS_Delay__c.Days__c</summarizedField>
    <summaryFilterItems>
        <field>BPS_Delay__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Requested Further Info</value>
    </summaryFilterItems>
    <summaryForeignKey>BPS_Delay__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>