DevOps/force-app/main/default/objects/Case/fields/BPS_Enquirer_Location__c.field-meta.xml
<CustomField>
    <fullName>BPS_Enquirer_Location__c</fullName>
    <label>Enquirer Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ballina</fullName>
            </value>
            <value>
                <fullName>Balranald</fullName>
            </value>
            <value>
                <fullName>Bathurst</fullName>
            </value>
            <value>
                <fullName>Blayney</fullName>
            </value>
            <value>
                <fullName>Bourke</fullName>
            </value>
            <value>
                <fullName>Broken Hill</fullName>
            </value>
            <value>
                <fullName>Byron</fullName>
            </value>
            <value>
                <fullName>Cabonne</fullName>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Clarence Valley</fullName>
            </value>
            <value>
                <fullName>Coonamble</fullName>
            </value>
            <value>
                <fullName>Cowra</fullName>
            </value>
            <value>
                <fullName>Dubbo</fullName>
            </value>
            <value>
                <fullName>Forbes</fullName>
            </value>
            <value>
                <fullName>Gilgandra</fullName>
            </value>
            <value>
                <fullName>Gosford</fullName>
            </value>
            <value>
                <fullName>Kyogle</fullName>
            </value>
            <value>
                <fullName>Lachlan</fullName>
            </value>
            <value>
                <fullName>Lismore</fullName>
            </value>
            <value>
                <fullName>Mid-Western Regional</fullName>
            </value>
            <value>
                <fullName>Murray</fullName>
            </value>
            <value>
                <fullName>Narromine</fullName>
            </value>
            <value>
                <fullName>Oberon</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Parkes</fullName>
            </value>
            <value>
                <fullName>Richmond Valley</fullName>
            </value>
            <value>
                <fullName>Tenterfield</fullName>
            </value>
            <value>
                <fullName>Tweed</fullName>
            </value>
            <value>
                <fullName>Warren</fullName>
            </value>
            <value>
                <fullName>Warrumbungle Shire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>