DevOps/force-app/main/default/objects/Case/fields/BPS_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>BPS_First_Contact__c</fullName>
    <label>First Contact</label>
    <type>Date</type>
</CustomField>