DevOps/force-app/main/default/objects/Case/fields/BPS_First_Contact_Within_2_Days__c.field-meta.xml
<CustomField>
    <fullName>BPS_First_Contact_Within_2_Days__c</fullName>
    <formula>IF(BPS_First_Contact__c -  BPS_Date_Created_by_LAC__c &lt;=2, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Contact Within 2 Days</label>
    <type>Checkbox</type>
</CustomField>