DevOps/force-app/main/default/objects/Case/fields/BPS_First_Implementation_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>BPS_First_Implementation_Contact_Attempt__c</fullName>
    <label>First Implementation Contact Attempt</label>
    <type>Date</type>
</CustomField>