DevOps/force-app/main/default/objects/Case/fields/BPS_First_Plan_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BPS_First_Plan_Submitted__c</fullName>
    <formula>AND(BPS_Plan_Sequence__c = 1, ISPICKVAL(BPS_Review_Type__c, &quot;&quot;), NOT(ISBLANK(BPS_Plan_Submitted_to_NDIA__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Plan Submitted</label>
    <type>Checkbox</type>
</CustomField>