DevOps/force-app/main/default/objects/Case/fields/BPS_First_Scheduled_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>BPS_First_Scheduled_Appointment_Date__c</fullName>
    <label>First Scheduled Appointment Date</label>
    <type>Date</type>
</CustomField>