DevOps/force-app/main/default/objects/Case/fields/BPS_First_Support_Type_Claimed__c.field-meta.xml
<CustomField>
    <fullName>BPS_First_Support_Type_Claimed__c</fullName>
    <label>First Support Type Claimed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>Core (Excluding Periodic Transport)</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>$0 Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>