DevOps/force-app/main/default/objects/Case/fields/BPS_Held_Within_14_Days_From_Access_Met__c.field-meta.xml
<CustomField>
    <fullName>BPS_Held_Within_14_Days_From_Access_Met__c</fullName>
    <formula>BPS_Planning_Meeting_Held__c - BPS_Participant__r.BPS_Access_Met__c &lt;=14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Held Within 14 Days From Access Met</label>
    <type>Checkbox</type>
</CustomField>