DevOps/force-app/main/default/objects/Case/fields/BPS_Implementation_Contact_Attempts__c.field-meta.xml
<CustomField>
    <fullName>BPS_Implementation_Contact_Attempts__c</fullName>
    <label>Implementation Contact Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>