DevOps/force-app/main/default/objects/Case/fields/BPS_Implementation_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>BPS_Implementation_Contact_Status__c</fullName>
    <label>Implementation Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>