DevOps/force-app/main/default/objects/Case/fields/BPS_Implementation_Declined__c.field-meta.xml
<CustomField>
    <fullName>BPS_Implementation_Declined__c</fullName>
    <formula>AND( NOT(ISBLANK( BPS_Implementation_Meeting_Held__c)), ISPICKVAL(BPS_Implementation_Meeting_Status__c, &quot;Implementation Declined&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Declined</label>
    <type>Checkbox</type>
</CustomField>