DevOps/force-app/main/default/objects/Case/fields/BPS_Implementation_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>BPS_Implementation_Meeting_Held__c</fullName>
    <label>Implementation Meeting Held</label>
    <type>Date</type>
</CustomField>