DevOps/force-app/main/default/objects/Case/fields/BPS_Implementation_Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>BPS_Implementation_Meeting_Status__c</fullName>
    <label>Implementation Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>UTP Complete in CRM</fullName>
            </value>
            <value>
                <fullName>UTC Complete in CRM</fullName>
            </value>
            <value>
                <fullName>Implementation Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>