DevOps/force-app/main/default/objects/Case/fields/BPS_Implementation_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>BPS_Implementation_Meeting_Type__c</fullName>
    <label>Implementation Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Group Workshop</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>