DevOps/force-app/main/default/objects/Case/fields/BPS_Implementation_offer__c.field-meta.xml
<CustomField>
    <fullName>BPS_Implementation_offer__c</fullName>
    <label>Implementation Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>