DevOps/force-app/main/default/objects/Case/fields/BPS_Implementation_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>BPS_Implementation_Scheduled__c</fullName>
    <formula>NOT(ISBLANK(BPS_Scheduled_Implementation_Meeting__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Scheduled</label>
    <type>Checkbox</type>
</CustomField>