DevOps/force-app/main/default/objects/Case/fields/BPS_Implemented__c.field-meta.xml
<CustomField>
    <fullName>BPS_Implemented__c</fullName>
    <formula>AND( NOT(ISBLANK( BPS_Planning_Meeting_Held__c )), BPS_Assigned_to_SF_Post_Implementation__c = FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implemented</label>
    <type>Checkbox</type>
</CustomField>