DevOps/force-app/main/default/objects/Case/fields/BPS_Is_Unscheduled_Review__c.field-meta.xml
<CustomField>
    <fullName>BPS_Is_Unscheduled_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unscheduled Review</label>
    <type>Checkbox</type>
</CustomField>