DevOps/force-app/main/default/objects/Case/fields/BPS_IsCurrentPlan__c.field-meta.xml
<CustomField>
    <fullName>BPS_IsCurrentPlan__c</fullName>
    <formula>IF(  BPS_Participant__r.BPS_Current_Plan_ID__c   =    Case_ID_18__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentPlan</label>
    <type>Checkbox</type>
</CustomField>