DevOps/force-app/main/default/objects/Case/fields/BPS_KPI_MeetingHeldWithin72Hrs__c.field-meta.xml
<CustomField>
    <fullName>BPS_KPI_MeetingHeldWithin72Hrs__c</fullName>
    <formula>BPS_Planning_Meeting_Held__c + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI_MeetingHeldWithin72Hrs</label>
    <type>Date</type>
</CustomField>