DevOps/force-app/main/default/objects/Case/fields/BPS_KPI_Scheduled8WeeksPriorToExpiry__c.field-meta.xml
<CustomField>
    <fullName>BPS_KPI_Scheduled8WeeksPriorToExpiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KPI_Scheduled8WeeksPriorToExpiry</label>
    <type>Checkbox</type>
</CustomField>