DevOps/force-app/main/default/objects/Case/fields/BPS_KPI_USRDue__c.field-meta.xml
<CustomField>
    <fullName>BPS_KPI_USRDue__c</fullName>
    <formula>BPS_Assigned_To_CRM_Inbox__c + 28</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI_USRDue</label>
    <type>Date</type>
</CustomField>