DevOps/force-app/main/default/objects/Case/fields/BPS_LAC_Office__c.field-meta.xml
<CustomField>
    <fullName>BPS_LAC_Office__c</fullName>
    <label>LAC Office</label>
    <length>25</length>
    <type>Text</type>
</CustomField>