DevOps/force-app/main/default/objects/Case/fields/BPS_Light_Touch_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BPS_Light_Touch_Submitted__c</fullName>
    <formula>AND(ISPICKVAL( BPS_Participant__r.BPS_Current_Plan__r.BPS_Review_Type__c, &quot;Light Touch&quot;), NOT(ISBLANK(BPS_Plan_Submitted_to_NDIA_CP__c)), BPS_Participant__r.BPS_Previous_Plan_Expiry__c - BPS_Plan_Submitted_to_NDIA_CP__c &lt;= 100, OR(BPS_Participant__r.BPS_Previous_Plan_Expiry__c - TODAY() &lt;= 100, TODAY() - BPS_Participant__r.BPS_Previous_Plan_Expiry__c &lt;= 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Light Touch Submitted</label>
    <type>Checkbox</type>
</CustomField>