DevOps/force-app/main/default/objects/Case/fields/BPS_Map_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>BPS_Map_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Map Uploaded</label>
    <type>Checkbox</type>
</CustomField>