DevOps/force-app/main/default/objects/Case/fields/BPS_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>BPS_Meeting_Held__c</fullName>
    <formula>NOT(ISBLANK(BPS_Participant__r.BPS_Current_Plan__r.BPS_Planning_Meeting_Held__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Held</label>
    <type>Checkbox</type>
</CustomField>