DevOps/force-app/main/default/objects/Case/fields/BPS_MKPI_8WeeksPriorToExpiry__c.field-meta.xml
<CustomField>
    <fullName>BPS_MKPI_8WeeksPriorToExpiry__c</fullName>
    <formula>BPS_Plan_Expiry_Previous_Plan__c - 56</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKPI_8WeeksPriorToExpiry</label>
    <type>Date</type>
</CustomField>