DevOps/force-app/main/default/objects/Case/fields/BPS_MKPI_CommencedFunding__c.field-meta.xml
<CustomField>
    <fullName>BPS_MKPI_CommencedFunding__c</fullName>
    <formula>BPS_Commenced_Using_Funding__c - BPS_Plan_Approved__c &lt;=90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKPI_CommencedFunding</label>
    <type>Checkbox</type>
</CustomField>