DevOps/force-app/main/default/objects/Case/fields/BPS_MKPI_ImplementationWithin14Days__c.field-meta.xml
<CustomField>
    <fullName>BPS_MKPI_ImplementationWithin14Days__c</fullName>
    <formula>and(BPS_Implementation_Meeting_Held__c &lt;= BPS_Plan_Approved_14__c, BPS_Implementation_Meeting_Held__c &gt;= BPS_Plan_Approved__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKPI_ImplementationWithin14Days</label>
    <type>Checkbox</type>
</CustomField>