DevOps/force-app/main/default/objects/Case/fields/BPS_MKPI_PlanningMeeting30Days__c.field-meta.xml
<CustomField>
    <fullName>BPS_MKPI_PlanningMeeting30Days__c</fullName>
    <formula>BPS_Planning_Meeting_Held__c- BPS_Participant__r.BPS_Access_Met__c &lt;=30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKPI_PlanningMeeting30Days</label>
    <type>Checkbox</type>
</CustomField>