DevOps/force-app/main/default/objects/Case/fields/BPS_MKPI_SurveyProvided__c.field-meta.xml
<CustomField>
    <fullName>BPS_MKPI_SurveyProvided__c</fullName>
    <formula>NOT(OR(ISPICKVAL(BPS_Post_Implementation_Survey__c, &quot;&quot;),ISPICKVAL(BPS_Post_Implementation_Survey__c, &quot;No&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKPI_SurveyProvided</label>
    <type>Checkbox</type>
</CustomField>