DevOps/force-app/main/default/objects/Case/fields/BPS_Mode_of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>BPS_Mode_of_Enquiry__c</fullName>
    <label>Mode of Enquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Community</fullName>
            </value>
            <value>
                <fullName>In Office (Face to Face)</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>PACE Case Assigned to SF</fullName>
            </value>
            <value>
                <fullName>Email/Phone</fullName>
                <isActive>false</isActive>
                <label>Email/Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>