DevOps/force-app/main/default/objects/Case/fields/BPS_Most_Recent_Implementation_Contact__c.field-meta.xml
<CustomField>
    <fullName>BPS_Most_Recent_Implementation_Contact__c</fullName>
    <label>Most Recent Implementation Contact</label>
    <type>Date</type>
</CustomField>