DevOps/force-app/main/default/objects/Case/fields/BPS_Most_Recent_Planning_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>BPS_Most_Recent_Planning_Contact_Attempt__c</fullName>
    <label>Most Recent Appointment Contact Attempt</label>
    <type>Date</type>
</CustomField>