DevOps/force-app/main/default/objects/Case/fields/BPS_New_Community_Linkage_KPI_Met__c.field-meta.xml
<CustomField>
    <fullName>BPS_New_Community_Linkage_KPI_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Community/Mainstream Linkage KPI Met</label>
    <type>Checkbox</type>
</CustomField>