DevOps/force-app/main/default/objects/Case/fields/BPS_Next_Checkpoint_Date__c.field-meta.xml
<CustomField>
    <fullName>BPS_Next_Checkpoint_Date__c</fullName>
    <label>Next Checkpoint Date</label>
    <type>Date</type>
</CustomField>