DevOps/force-app/main/default/objects/Case/fields/BPS_Number_of_Scheduled_Meetings__c.field-meta.xml
<CustomField>
    <fullName>BPS_Number_of_Scheduled_Meetings__c</fullName>
    <label>Number of Scheduled Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>