DevOps/force-app/main/default/objects/Case/fields/BPS_Offered_Continuation__c.field-meta.xml
<CustomField>
    <fullName>BPS_Offered_Continuation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offered Continuation</label>
    <type>Checkbox</type>
</CustomField>