DevOps/force-app/main/default/objects/Case/fields/BPS_Offered_Continuation_Previous_Plan__c.field-meta.xml
<CustomField>
    <fullName>BPS_Offered_Continuation_Previous_Plan__c</fullName>
    <formula>BPS_Participant__r.BPS_Previous_Plan__r.BPS_Offered_Continuation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offered Continuation - Previous Plan</label>
    <type>Checkbox</type>
</CustomField>