DevOps/force-app/main/default/objects/Case/fields/BPS_Participant__c.field-meta.xml
<CustomField>
    <fullName>BPS_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Participant)</relationshipLabel>
    <relationshipName>BPSCases</relationshipName>
    <type>Lookup</type>
</CustomField>