DevOps/force-app/main/default/objects/Case/fields/BPS_Participant_Status__c.field-meta.xml
<CustomField>
    <fullName>BPS_Participant_Status__c</fullName>
    <formula>TEXT(BPS_Participant__r.BPS_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Status</label>
    <type>Text</type>
</CustomField>