DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Approval_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Approval_Submitted__c</fullName>
    <formula>IF ( BPS_Plan_Approved__c &lt;&gt; Null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Approval Submitted</label>
    <type>Checkbox</type>
</CustomField>