DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Approved_14__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Approved_14__c</fullName>
    <formula>CASE(WEEKDAY(BPS_Plan_Approved__c), 1, (BPS_Plan_Approved__c + 18), 2, (BPS_Plan_Approved__c + 18), (BPS_Plan_Approved__c + 20) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Approved + 14</label>
    <type>Date</type>
</CustomField>