DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Approved_7__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Approved_7__c</fullName>
    <formula>CASE( WEEKDAY(BPS_Plan_Approved__c), 5, (BPS_Plan_Approved__c + 11), 6, (BPS_Plan_Approved__c + 11), (BPS_Plan_Approved__c + 9) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Approved + 7</label>
    <type>Date</type>
</CustomField>