DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Approved__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Approved__c</fullName>
    <label>Plan Approved</label>
    <type>Date</type>
</CustomField>