DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_End_Date__c</fullName>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>